crates/rome_cli/tests/snapshots/main_commands_check/applies_organize_imports.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{ "organizeImports": { "enabled": true } }
```

## `check.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


