crates/rome_cli/tests/snapshots/main_commands_check/applies_organize_imports_from_cli.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
import * as something from "../something";
import { bar, foom, lorem } from "foo";

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


