crates/rome_cli/tests/snapshots/main_commands_check/apply_noop.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js

if(a != 0) {}

```

# Emitted Messages

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied, but there are still diagnostics to be addressed
  

```

```block
Skipped 1 suggested fixes.
If you wish to apply the suggested (unsafe) fixes, use the command rome check --apply-unsafe

```

```block
Fixed 1 file(s) in <TIME>
```


