crates/rome_cli/tests/snapshots/main_commands_check/apply_ok.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js

(1 >= 0)

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


