crates/rome_cli/tests/snapshots/main_commands_check/apply_unsafe_no_assign_in_expression.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
res.onAborted(() => aborted === true);

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


