crates/rome_cli/tests/snapshots/main_commands_check/apply_unsafe_with_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `test1.js`

```js
const a = 4;
console.log(a);
function f() {
	arguments;
}

```

## `test2.js`

```js
const a = 4;
console.log(a);
function f() {
	arguments;
}

```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
test1.js internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there a still diagnostics to address.
  

```

```block
test2.js internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there a still diagnostics to address.
  

```

```block
Fixed 2 file(s) in <TIME>
```


